# solx

./: .gitignore  .gitmodules  Cargo.toml  README.md  solidity.yaml
.cargo/: config.toml
.github/actions/build-llvm/: action.yml
.github/actions/build-solc/: action.yml
.github/actions/prepare-msys/: action.yml
.github/actions/rust-unit-tests/: action.yml
.github/workflows/: ccache-regen.yaml  coverage.yaml  foundry.yaml  hardhat.yaml  integration-tests.yaml  release.yaml  sanitizers.yaml  solx-tester.yaml
docs/src/: 01-installation.md  02-command-line-interface.md  03-standard-json.md
docs/src/guides/: 01-sanitizers.md
solx/: Cargo.toml
solx-benchmark-converter/: Cargo.toml
solx-benchmark-converter/src/: lib.rs
solx-benchmark-converter/src/benchmark/: mod.rs
solx-benchmark-converter/src/benchmark/test/: metadata.rs  selector.rs
solx-benchmark-converter/src/benchmark/test/toolchain/codegen/versioned/executable/: run.rs
solx-benchmark-converter/src/benchmark_converter/: main.rs
solx-benchmark-converter/src/input/: build_failures.rs  compilation_time.rs  mod.rs  test_failures.rs  testing_time.rs
solx-benchmark-converter/src/model/benchmark/test/toolchain/: mod.rs
solx-benchmark-converter/src/model/benchmark/test/toolchain/codegen/: mod.rs
solx-benchmark-converter/src/model/benchmark/test/toolchain/codegen/versioned/: mod.rs
solx-benchmark-converter/src/output/: json.rs  mod.rs
solx-benchmark-converter/src/output/xlsx/: mod.rs  worksheet.rs
solx-codegen-evm/: Cargo.toml
solx-codegen-evm/src/codegen/context/: mod.rs
solx-codegen-evm/src/codegen/context/function/: mod.rs
solx-codegen-evm/src/codegen/instructions/: arithmetic.rs
solx-codegen-evm/src/context/: mod.rs
solx-codegen-evm/src/context/attribute/: mod.rs
solx-compiler-downloader/: Cargo.toml  solc-bin-llvm.json  solc-bin-upstream.json
solx-compiler-downloader/src/: lib.rs
solx-compiler-downloader/src/config/: compiler_list.rs  mod.rs
solx-compiler-downloader/src/config/executable/: mod.rs
solx-core/: Cargo.toml
solx-core/src/: const.rs  lib.rs
solx-core/src/process/: input.rs  mod.rs
solx-core/src/project/: mod.rs
solx-core/src/project/contract/: metadata.rs  mod.rs
solx-core/src/yul/parser/statement/expression/: function_call.rs
solx-dev/: Cargo.toml  foundry-tests.toml  hardhat-tests.toml  solc-downloader.json
solx-dev/src/: lib.rs  utils.rs
solx-dev/src/llvm/: build_type.rs  mod.rs  path.rs  project.rs
solx-dev/src/solx_dev/: main.rs
solx-dev/src/solx_dev/arguments/: mod.rs
solx-dev/src/solx_dev/arguments/llvm/: build.rs  mod.rs
solx-dev/src/solx_dev/arguments/test/: foundry.rs  hardhat.rs  mod.rs
solx-dev/src/test/: mod.rs
solx-dev/src/test/foundry/: mod.rs
solx-dev/src/test/foundry/config/: compiler.rs  mod.rs  project.rs
solx-dev/src/test/foundry/output/: build.rs  mod.rs
solx-dev/src/test/foundry/output/test/: mod.rs
solx-dev/src/test/foundry/output/test/file/: mod.rs  test_result.rs
solx-dev/src/test/hardhat/: mod.rs
solx-dev/src/test/hardhat/config/: compiler.rs  mod.rs
solx-dev/src/test/hardhat/config/project/: build_system.rs  mod.rs
solx-dev/src/test/hardhat/output/: mod.rs
solx-dev/src/test/hardhat/output/test/: mod.rs  stats.rs  test_result.rs
solx-evm-assembly/: Cargo.toml
solx-solc-test-adapter/src/test/params/: evm_version.rs  mod.rs
solx-standard-json/src/output/: mod.rs
solx-tester/: Cargo.toml
solx-tester/src/: filters.rs  lib.rs  utils.rs  workflow.rs
solx-tester/src/compilers/llvm_ir/: mode.rs
solx-tester/src/compilers/mode/: llvm_options.rs  mod.rs
solx-tester/src/compilers/solidity/solc/: mod.rs  mode.rs
solx-tester/src/compilers/solidity/solc/compiler/: mod.rs
solx-tester/src/compilers/solidity/solx/: mod.rs  mode.rs
solx-tester/src/compilers/yul/: mode.rs  mode_upstream.rs
solx-tester/src/revm/: mod.rs
solx-tester/src/solx_tester/: arguments.rs  main.rs
solx-tester/src/summary/: mod.rs
solx-tester/src/summary/benchmark_adapters/: input.rs  selector.rs
solx-tester/src/summary/element/: mod.rs
solx-tester/src/summary/element/outcome/: mod.rs  passed_variant.rs
solx-utils/: Cargo.toml
solx-utils/src/: evm_version.rs  lib.rs  logging.rs
solx-yul/src/yul/parser/statement/expression/function_call/: name.rs
solx/src/: solc.rs
solx/tests/cli/: evm_version.rs  llvm_ir.rs  mod.rs
solx/tests/common/: const.rs  mod.rs
solx/tests/data/standard_json_input/: evm_version_too_old.json  solidity_fuzzed_simple_use_expression.json
tests/solidity/simple/fuzzed/: boolean_assert3.sol
tests/solidity/simple/yul_instructions/: div_const.sol  mod_const.sol  msize.sol  sdiv_const.sol  smod_const.sol
