[workspace]
members = [
    "solx",
    "solx-core",
    "solx-standard-json",
    "solx-evm-assembly",
    "solx-yul",
    "solx-codegen-evm",
    "solx-utils",
    "solx-dev",
    "solx-tester",
    "solx-benchmark-converter",
    "solx-solc-test-adapter",
    "solx-compiler-downloader",
]
resolver = "2"

[workspace.package]
authors = [
    "The Matter Labs Team <hello@matterlabs.dev>",
]
edition = "2021"
version = "0.1.3"
