[package]
name = "solx-benchmark-converter"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Benchmark converter for solx"
license = "MIT OR Apache-2.0"

[[bin]]
name = "solx-benchmark-converter"
path = "src/benchmark_converter/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "3.0"
glob = "0.3"
semver = "1.0"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
rust_xlsxwriter = "0.89"

solx-utils = { path = "../solx-utils" }
