[package]
name = "solx-codegen-evm"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "EVM codegen for solx"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
semver = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
num = "0.4"
itertools = "0.14"
indexmap = { version = "2.11", features = ["serde"] }

solx-utils = { path = "../solx-utils" }

[dependencies.inkwell]
git = "https://github.com/NomicFoundation/inkwell"
branch = "main"
default-features = false
features = ["llvm21-1", "serde", "no-libffi-linking", "target-evm"]
