[package]
name = "solx-core"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "solx compiler core library"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
path-slash = "0.2"
normpath = "1.3"
rayon = "1.10"

serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
ciborium = "0.2"
semver = { version = "1.0", features = [ "serde" ] }
hex = "0.4"
num = "0.4"

solx-standard-json = { path = "../solx-standard-json" }
solx-evm-assembly = { path = "../solx-evm-assembly" }
solx-yul = { path = "../solx-yul" }
solx-codegen-evm = { path = "../solx-codegen-evm" }
solx-utils = { path = "../solx-utils" }

[dependencies.inkwell]
git = "https://github.com/NomicFoundation/inkwell"
branch = "main"
default-features = false
features = ["llvm21-1", "serde", "no-libffi-linking", "target-evm"]
