[package]
name = "solx-dev"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "Developer tool for solx"
license = "MIT OR Apache-2.0"

[[bin]]
name = "solx-dev"
path = "src/solx_dev/main.rs"

[lib]
doctest = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "3.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
toml = "0.8"

itertools = "0.4"
fs_extra = "1.3"
path-slash = "0.2"
glob = "0.3"
regex = "1.11"
sedregex = "0.2"

solx-compiler-downloader = { path = "../solx-compiler-downloader" }
solx-benchmark-converter = { path = "../solx-benchmark-converter" }
solx-utils = { path = "../solx-utils" }
