[package]
name = "solx-evm-assembly"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "EVM assembly translator for solx"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
rayon = "1.10"

serde = { version = "1.0", "features" = [ "derive" ] }
ciborium = "0.2"
twox-hash = "2.1"
semver = { version = "1.0", features = [ "serde" ] }
hex = "0.4"
num = "0.4"

solx-yul = { path = "../solx-yul" }
solx-codegen-evm = { path = "../solx-codegen-evm" }
solx-utils = { path = "../solx-utils" }

[dependencies.inkwell]
git = "https://github.com/NomicFoundation/inkwell"
branch = "main"
default-features = false
features = ["llvm21-1", "serde", "no-libffi-linking", "target-evm"]
