[package]
name = "solx"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "LLVM-based Solidity compiler for the EVM"
license = "GPL-3.0"

[[bin]]
name = "solx"
path = "src/solx.rs"

[lib]
doctest = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
semver = { version = "1.0", features = [ "serde" ] }
libc = "0.2"

solx-core = { path = "../solx-core" }
solx-standard-json = { path = "../solx-standard-json" }
solx-utils = { path = "../solx-utils" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.19"
test-case = "3.3"

solx-codegen-evm = { path = "../solx-codegen-evm" }

[dev-dependencies.inkwell]
git = "https://github.com/NomicFoundation/inkwell"
branch = "main"
default-features = false
features = ["llvm21-1", "serde", "no-libffi-linking", "target-evm"]